--- a/501ProjectTest/src/main/resources/static/index.html
+++ b/501ProjectTest/src/main/resources/static/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>index</h1>
-	<a href="/write">재능 등록</a>
+	<a href="/write4">재능 등록 4</a>
+	<a href="/write5">재능 등록 5</a>
 </body>
 </html>
