23-04-09 카테고리 불러오는 기능, 입력 데이터 DB INSERT 완성

--- a/501ProjectTest/src/main/resources/static/index.html
+++ b/501ProjectTest/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>index</h1>
-	<a href="/write4">재능 등록 4</a>
-	<a href="/write5">재능 등록 5</a>
+	<a href="/writeFrom4">재능 등록 4</a>
+	<a href="/writeFrom5">재능 등록 5</a>
 </body>
 </html>
